--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Details.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>EntidadeViewModel</h4>
+    <h4>Entidade</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -205,6 +205,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("  Atualizar dados", "Edit", new { id = Model.Id }, new { @class = "btn btn-warning fa fa-file-text" }) |
+    @Html.ActionLink("  VOLTAR", "Index", new { area = "" }, new { @class = "btn btn-danger fa fa-reply" })
 </p>
