--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Conjuge/Create.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Conjuge/Create.cshtml
@@ -5,7 +5,7 @@
     var PessoaId = ViewBag.PessoaId;
 }
 
-<h2>Create</h2>
+<h2>Novo Cadastro</h2>
 
 
 @using (Html.BeginForm()) 
@@ -13,7 +13,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-    
+        <h4>Cônjuge</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.Hidden("PessoaId")
@@ -44,7 +44,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SexoId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("SexoId", String.Empty)
+                @Html.DropDownList("SexoId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SexoId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -52,7 +52,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NacionalidadeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("NacionalidadeId", String.Empty)
+                @Html.DropDownList("NacionalidadeId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NacionalidadeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -140,7 +140,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EstadoCivilId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("EstadoCivilId", String.Empty)
+                @Html.DropDownList("EstadoCivilId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EstadoCivilId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -156,7 +156,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AtividadeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AtividadeId", String.Empty)
+                @Html.DropDownList("AtividadeId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AtividadeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -222,7 +222,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.NaturalidadeId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("NaturalidadeId", String.Empty)
+                @Html.DropDownList("NaturalidadeId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.NaturalidadeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -250,7 +250,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GrauInstrucaoId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("GrauInstrucaoId", String.Empty)
+                @Html.DropDownList("GrauInstrucaoId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GrauInstrucaoId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -370,7 +370,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TipoImovelId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TipoImovelId", String.Empty)
+                @Html.DropDownList("TipoImovelId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TipoImovelId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -378,7 +378,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TipoVeiculoId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TipoVeiculoId", String.Empty)
+                @Html.DropDownList("TipoVeiculoId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.TipoVeiculoId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -390,7 +390,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.FaixaSalarialId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("FaixaSalarialId", String.Empty)
+                @Html.DropDownList("FaixaSalarialId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FaixaSalarialId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -398,21 +398,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RendaId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("RendaId", String.Empty)
+                @Html.DropDownList("RendaId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.RendaId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+   @Html.ActionLink("  VOLTAR", "Index", "Conjuge", new { area = "" }, new { @class = "btn btn-danger fa fa-reply" })
 </div>
 
 @section Scripts {
