--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Dependente/Details.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Dependente/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model GrupoPlennus.HabitacaoMvc.ViewModels.DependenteViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Dependente";
 }
 
-<h2>Details</h2>
+<h2>Detalhes</h2>
 
 <div>
-    <h4>DependenteViewModel</h4>
+    <h4>Dependente</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -85,6 +85,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("  Atualizar dados", "Edit", "Dependente", new { id = Model.Id }, new { @class = "btn btn-warning fa fa-file-text" }) |
+    @Html.ActionLink("  VOLTAR", "Index", "Dependente", new { id = Model.PessoaId }, new { @class = "btn btn-danger fa fa-reply" })
 </p>
