--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Dependente/Edit.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Dependente/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GrupoPlennus.HabitacaoMvc.ViewModels.DependenteViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Dependente";
 }
 
-<h2>Edit</h2>
+<h2>Atualizar dados</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>DependenteViewModel</h4>
+        <h4>Dependente</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -28,7 +28,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control", @Value = Model.DataNascimento.ToString("dd/MM/yyyy") } })
                 @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SexoId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-               @Html.DropDownList("SexoId", String.Empty)
+               @Html.DropDownList("SexoId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.SexoId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -60,7 +60,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GrauInstrucaoId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("GrauInstrucaoId",String.Empty)
+                @Html.DropDownList("GrauInstrucaoId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GrauInstrucaoId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -93,14 +93,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("  VOLTAR", "Index", "Dependente", new { id = Model.PessoaId }, new { @class = "btn btn-danger fa fa-reply" })
 </div>
 
 @section Scripts {
