--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Dependente/Index.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Dependente/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<GrupoPlennus.HabitacaoMvc.ViewModels.DependenteViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Dependentes";
     var PessoaId = TempData["PessoaId"];
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", new { id = PessoaId})
+    @Html.ActionLink(" Novo dependente", "Create", new { id = PessoaId}, new { @class = "btn btn-success fa fa-user-plus" })
 </p>
 
 <table class="table">
@@ -22,24 +22,7 @@
         <th>
             @Html.DisplayNameFor(model => model.SexoId)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Cpf)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nis)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.GrauInstrucaoId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RendaComprovada)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RendaNaoComprovada)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Deficiente)
-        </th>
+       
         <th></th>
     </tr>
 
@@ -54,28 +37,13 @@
         <td>
             @Html.DisplayFor(modelItem => item.Sexo.Descricao)
         </td>
+     
+     
         <td>
-            @Html.DisplayFor(modelItem => item.Cpf)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nis)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.GrauInstrucao.Descricao)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RendaComprovada)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.RendaNaoComprovada)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Deficiente)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("  Atualizar dados", "Edit", new { id = item.Id }, new { @class = "btn btn-warning fa fa-file-text" }) |
+            @Html.ActionLink(" Detalhar dados", "Details", new { id = item.Id }, new { @class = "btn btn-primary fa  fa-info-circle" }) |
+            @Html.ActionLink(" Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-danger fa  fa-trash" })
+            
         </td>
     </tr>
 }
