--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Create.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Entidade/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GrupoPlennus.HabitacaoMvc.ViewModels.EntidadeViewModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Entidade";
 }
 
-<h2>Create</h2>
+<h2>Novo Cadastro</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EntidadeViewModel</h4>
+        <h4>Entidade</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -138,7 +138,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EntidadeTiposId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("EntidadeTiposId", String.Empty)
+                @Html.DropDownList("EntidadeTiposId", null,String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EntidadeTiposId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -202,21 +202,21 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EntidadeMasterId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("EntidadeMasterId", String.Empty)
+                @Html.DropDownList("EntidadeMasterId", null, String.Empty, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.EntidadeMasterId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+   @Html.ActionLink("  VOLTAR", "Index", new { area = "" }, new { @class = "btn btn-danger fa fa-reply" })
 </div>
 
 @section Scripts {
