--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/EntidadeMaster/Edit.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/EntidadeMaster/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model GrupoPlennus.HabitacaoMvc.ViewModels.EntidadeMasterViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Entidade Master";
 }
 
-<h2>Edit</h2>
+<h2>Atualizar Dados</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>EntidadeMasterViewModel</h4>
+        <h4>Entidade Master</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -140,7 +140,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataFundacao, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataFundacao, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataFundacao, new { htmlAttributes = new { @class = "form-control", @Value = Model.DataFundacao.ToString("dd/MM/yyyy") } })
                 @Html.ValidationMessageFor(model => model.DataFundacao, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -195,14 +195,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-success" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("  VOLTAR", "Index",  new { area = "" }, new { @class = "btn btn-danger fa fa-reply" })
 </div>
 
 @section Scripts {
