--- a/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Home/Index.cshtml
+++ b/GrupoPlennus/app/GrupoPlennus.HabitacaoMvc/Views/Home/Index.cshtml
@@ -1,31 +1,33 @@
 ﻿@{
     ViewBag.Title = "Home Page";
+    Layout = "~/Views/Shared/_NaoLogado.cshtml";
+
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Plennus Habitação</h1>
+    <p class="lead">Bem vindo ao sistema de gerenciamento habitacional do Grupo Plennus.</p>
+    <p><a href="http://plennusconsultoria.com.br" class="btn btn-primary btn-lg">Leia mais &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Associações, Cooperativas e Sindicatos</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Com o sistema Plennus Habitação você consiguira manter um cadastro atualizado de todos os associados, com um layout que atende há todos os programas habitacionais nacional.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="http://plennusconsultoria.com.br/AssessoriaConsultoriaImobiliaria">Leia mais &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Area de atuação e principais clientes</h2>
+        CONSULTORIA E ASSESSORIA IMOBILIARIA<br />
+
+        <p>Desde 2011 presta assessoria e consultoria no desenvolvimento dos projetos construtivo do Minha Casa Minha Vida Entidades - MCMV-E</p>
+        <p><a class="btn btn-default" href="http://plennusconsultoria.com.br/AreaAtuacao">Leia mais &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Assessoria e Consultoria</h2>
+        <p>Nosso grupo atende as mais diversas necessidades para criação, captação de recursos e gestão de projetos habitacionais, entre em contato e agende uma reunião.</p>
+        <p><a class="btn btn-default" href="http://plennusconsultoria.com.br/AreaAtuacao">Leia mais &raquo;</a></p>
     </div>
 </div>
